# DroneFirmware

./: .gitignore  AGENTS.md  README.md  SPEC.md  build.sh  platformio.ini
DroneGCS/: README.md  pyproject.toml
DroneGCS/drone_gcs/: __init__.py  __main__.py
DroneGCS/drone_gcs/connection/: __init__.py  connection_manager.py
DroneGCS/drone_gcs/control/: __init__.py  joystick.py
DroneGCS/drone_gcs/protocol/: __init__.py  mavlink_protocol.py
DroneGCS/drone_gcs/ui/: __init__.py  graphs.py  main_window.py
companion/: README.md  pyproject.toml
companion/companion/: __init__.py  main.py
companion/companion/autopilot/: __init__.py  autopilot.py
companion/companion/comms/: __init__.py  spi_link.py
companion/companion/control/: __init__.py
companion/companion/vision/: optical_flow.py  vision.py
config/: constants.h  pins.h
esp32-rc/: README.md  platformio.ini
src/drivers/: imu.cpp  imu.h
src/main/: globals.h  main.cpp
src/systems/comms/: radio.cpp  radio.h
src/systems/control/: pid.cpp  pid.h
src/systems/safety/: failsafe.cpp  failsafe.h
tests/: README.md  fc_simulator.py  pyproject.toml  run_tests.py  test_failsafe.py  test_integration.py  test_motor_mixer.py  test_pid.py  test_rc_protocol.py  test_telemetry.py
