[project]
name = "drone-tests"
version = "1.0.0"
description = "Flight Controller Test Suite"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "pyserial>=3.5",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
